# 3DModeling

./: CMakeLists.txt  Camera.cpp  Camera.hpp  CollisionFloor.cpp  CollisionFloor.hpp  CollisionPolygon.cpp  CollisionPolygon.hpp  CollisionWall.cpp  CollisionWall.hpp  Door.cpp  Door.hpp  Doorr.cpp  Doorr.hpp  Floor.cpp  Floor.hpp  Light.cpp  Light.hpp  Polygon.cpp  Polygon.hpp  Rect.cpp  Rect.hpp  Scene.cpp  Scene.hpp  Triangle.cpp  Triangle.hpp  Vector.cpp  Vector.hpp  Wall.cpp  Wall.hpp  collisionFloor  dimensions  floors  in  lights  main.cpp  run.bat  run.sh  scene  test  translateRect.py  (+2 more)
Textures/: textureLoader.cpp  textureLoader.hpp
